# cookiecutter-nist-python

./: .buildinfo  .copier-answers.yml  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc.toml  .taplo.toml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile2  README.md  README.rst  TODO.md  authors.html  changelog.html  ci.html  contributing.html  cookiecutter.json  copier.yaml  genindex.html  index.html  installation.html  justfile  license.html  navigation.html  noxfile.py  objects.inv  pyproject.toml  ruff.toml  search.html  searchindex.js  setup.cfg  tmp.txt  tools  tutorial.html
.github/: ISSUE_TEMPLATE.md  dependabot.yml  labeler.yml
_sources/: ci.md  index.md  installation.md  license.md  tutorial.md
_static/: documentation_options.js
changelog.d/: 20231220_200604_william.krekelberg_update_dev_envs_format.md  20231221_143128_william.krekelberg.md  20231223_134634_william.krekelberg.md
docs/: ci.md  conf.py  index.md  tutorial.md
hooks/: post_gen_project.py  pre_gen_project.py
requirements/: build.txt  dev-base.txt  dev-complete.txt  dev.txt  docs.txt  pipxrun-tools.txt  pre-commit-additional-dependencies.txt  py310-dev-base.yaml  py310-dev-complete.yaml  py310-docs.yaml  py310-test-extras.yaml  (+30 more)
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc.toml  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  justfile  noxfile.py  pyproject.toml  ruff.toml
{{cookiecutter.project_name}}/.github/: ISSUE_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
{{cookiecutter.project_name}}/.github/actions/setup-cached-uv-and-python/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: bump.yml  cd.yml  check-pr.yml  ci.yml  copier-update.yml  cruft-update.yml  docs.yml  label-prs.yml  publish.yml  release-auto.yml  release.yml  reusable-docs.yml  update-copier.yml  update-cruft.yml  update-deps.yml  update-package-version.yml  {% if cookiecutter.__copier %}update-copier.yml{% endif %}  {% if not cookiecutter.__copier %}update-cruft.yml{% endif %}
{{cookiecutter.project_name}}/changelog.d/templates/: new_fragment.md.j2
{{cookiecutter.project_name}}/changelog.d/templates/auto-changelog/: macros.jinja2  template.jinja2
{{cookiecutter.project_name}}/config/: recipe-append.yaml
{{cookiecutter.project_name}}/docs/: conf.py  index.md  installation.md
{{cookiecutter.project_name}}/docs/_templates/: class-individual-pages.rst  class-single-page.rst  custom-module-template.rst  module-custom-imported.rst  module-custom.rst  module-single.rst  module-template.rst
{{cookiecutter.project_name}}/docs/_templates/autodocsumm/: class-noindex.rst  class.rst  module-inherit.rst  module-noindex.rst  module.rst
{{cookiecutter.project_name}}/docs/_templates/autosummary/: base.rst  module.rst
{{cookiecutter.project_name}}/docs/examples/: example-usage.md  index.md
{{cookiecutter.project_name}}/docs/examples/usage/: demo.ipynb
{{cookiecutter.project_name}}/docs/reference/: index.md
{{cookiecutter.project_name}}/examples/: README.md
{{cookiecutter.project_name}}/examples/usage/: demo.ipynb
{{cookiecutter.project_name}}/requirements/: uv.toml.tmp
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  core.py  {% if cookiecutter.command_line_interface != 'No command-line interface' %}cli.py{% endif %}  {% if cookiecutter.command_line_interface != 'none' %}cli.py{% endif %}
{{cookiecutter.project_name}}/tests/: __init__.py  test_smoke.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/tools/: check_dist_version.py  clean_kernelspec.py  cog_runner.py  common_utils.py  dataclass_parser.py  execute_notebook.py  just_fmt.py  notebook.just  noxtools.py  pipxrun.py  projectconfig.py  requirements_lock.py  run_typechecker.py  shared.just  symlink_docs_examples_notebooks.py  sync_pyproject_min_versions.py  typecheck.py  update_additional_dependencies.py  update_pre_commit_additional_dependencies.py  uv_locker.py  uvxrun.py  {% if cookiecutter.use_jupyter %}notebook.just{% endif %}  {% if cookiecutter.use_jupyter %}symlink_docs_examples_notebooks.py{% endif %}
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .noxconfig.example.toml  .noxconfig.toml  .pre-commit-config.yaml  .prettierrc.yaml  .recipe-append.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  cleanup-docs-nist-pages.sh  environment-dev.yml  environment-tools.yaml  environment.yaml  environment.yml  noxfile.py  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.config/: noxconfig.example.toml
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/config/: noxconfig.example.toml  recipe-append.yaml  userconfig.example.toml  userconfig.toml
{{cookiecutter.project_slug}}/docs/: Makefile  api_automodule.rst  api_autosummary.rst  authors.md  changelog.md  conf.py  contributing.md  demo.ipynb  index.md  index.rst  installation.md  installation.rst  navigation.md  usage.md  usage.rst
{{cookiecutter.project_slug}}/docs/_templates/: custom-class.rst
{{cookiecutter.project_slug}}/docs/examples/: example-usage.md  index.md
{{cookiecutter.project_slug}}/docs/reference/: index.md
{{cookiecutter.project_slug}}/environment/: dev-extras.yaml  docs-extras.yaml  test-extras.yaml
{{cookiecutter.project_slug}}/examples/: README.md
{{cookiecutter.project_slug}}/examples/usage/: demo.ipynb
{{cookiecutter.project_slug}}/scripts/: dist-conda.mk  lint.mk
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  core.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tools/: noxtools.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/inner/: __init__.py
(+89 files in other folders)
