[project]
name = "cookiecutter-nist-python"
version = "0.6.0"
description = "Cookiecutter template for NIST python packages"
readme = "README.md"
keywords = [
    "cookiecutter-nist-python",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Documentation = "https://pages.nist.gov/cookiecutter-nist-python/"
Homepage = "https://github.com/usnistgov/cookiecutter-nist-python"

[dependency-groups]
dev = [
    { include-group = "mypy" },  # so can use dmypy
    { include-group = "nox" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
    { include-group = "test-extras" },
]
docs = [
    "autodocsumm",
    "myst-parser",
    "sphinx>=5.3.0",
    # myst-parser, ipython,
    "sphinx-book-theme",
    "sphinx-copybutton",
]
# other packages/tools
basedpyright = [ "basedpyright>=1.31.3" ]
cog = [ "cogapp" ]
# other environments
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
ipython = [ "ipython" ]
mypy = [ "mypy[faster-cache]>=1.15.0" ]
nox = [ "nox>=2025.5.1" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
test-extras = [
    "cookiecutter",
    "copier",
    "copier-template-extensions>=0.3.1",
]
typecheck = [
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "test-extras" },
    { include-group = "typecheck-runner" },
]
typecheck-runner = [ "typecheck-runner>=0.1.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------

[tool.uv]
required-version = ">=0.7.15"
default-groups = [ "dev" ]
# other tools
dependency-groups.cog.requires-python = ">=3.14"
dependency-groups.dev.requires-python = ">=3.14"
dependency-groups.docs-live.requires-python = ">=3.14"
dependency-groups.docs-spelling.requires-python = ">=3.14"
dependency-groups.docs.requires-python = ">=3.14"
dependency-groups.ipython.requires-python = ">=3.14"
dependency-groups.mypy.requires-python = ">=3.14"
dependency-groups.nox.requires-python = ">=3.14"
fork-strategy = "requires-python"
managed = true
# * Checks ---------------------------------------------------------------------
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
    "PP002",
    "PP003",
]

[tool.pyproject-fmt]
indent = 4
# max_supported_python = "3.13"
keep_full_version = true
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
]
collapse_tables = []

[tool.typos]
default.extend-identifiers.CPY = "CPY"

[tool.pytest]
# * Testing --------------------------------------------------------------------

ini_options.addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
    "-s",
]
ini_options.testpaths = [
    "tests",
]
ini_options.markers = [
    "book: sphinx book theme",
    "click: Click cli",
    "cookie: cookiecutter",
    "copier: run copier tests",
    "create: simple test on path creation",
    "default: default template",
    "disable: test that has been disabled by default",
    "docs: make docs",
    "furo: furo theme",
    "lint: run linting",
    "longname: a project with a long name",
    "mypystrict: run mypy --strict",
    "nocli: no command-line interface",
    "notebook: run typing/test on notebook",
    "test: run tests",
    "typecheck: run type checkers",
    "typer: Typer template",
    "version: update-version-scm (disabled by default)",
]
ini_options.minversion = "8"
ini_options.log_cli_level = "INFO"
ini_options.log_level = "INFO"
ini_options.strict_xfail = "true"
ini_options.filterwarnings = [
    "error",
    "ignore: Dirty template:copier.errors.DirtyLocalWarning",
]

[tool.coverage]
run.branch = true
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/vendored/*",
]
report.show_missing = true

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
files = [
    "tests",
]
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
    ".eggs",
    ".nox",
    ".numba_cache",
    ".tox",
    ".venv",
    "docs",
]
check_untyped_defs = true
strict = false
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
overrides = [ { ignore_missing_imports = true, module = [ "cookiecutter.*" ] } ]

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [  ]

[tool.pyrefly]
project-includes = [ "tests" ]
enabled-ignores = [ "pyrefly" ]

[tool.pyright]
include = [
    "tests",
]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
typeCheckingMode = "strict"
# typeCheckingMode = "standard"
# strict = [
#     "src",
#     "tests",
#     "noxfile.py",
#     "tools/*.py",
# ]
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
# Extra flags
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
deprecateTypingAliases = true
enableReachabilityAnalysis = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
# reportMissingSuperCall = true
reportUninitializedInstanceVariable = true
reportUnusedCallResult = true
# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateUsage = false  # dupe of PLC2701
reportPrivateImportUsage = false  # dupe of PLC2701
reportUnusedImport = false  # dupe of F401
reportUnusedVariable = false  # dupe of F841
executionEnvironments = [
    { root = "tests" },
    # reportCallIssue = false
    # reportArgumentType = false
    # reportMissingImports = false
    { reportUnusedCallResult = false },
]

[tool.ty]
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false
src.include = [ "tests" ]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"
dependencies.pytest-accept = { pip = true }
dependencies.copier-template-extensions = { pip = true }
envs.dev.groups = "dev"
envs.pre-commit-additional-dependencies.reqs = [
    "rust-just",
]
envs.pre-commit-additional-dependencies.groups = [
    "cog",
]
envs.pre-commit-additional-dependencies.skip-package = true
envs.pre-commit-additional-dependencies.style = "requirements"
envs.test.groups = "test"
envs.test.python = "all"
envs.uvx-tools.reqs = [
    # these used solely for specking tools to be used with uvx --constraints=...
    "conda-lock>=2.5.5",
    "copier",
    "copier-template-extensions>=0.3.1",
    "cruft",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.396",
    "scriv",
    "twine>=5.0.0",
    "ty>=0.0.14",
]
envs.uvx-tools.groups = [
    "basedpyright",
    "cog",
    "mypy",
    "nox",
    "typecheck-runner",
]
envs.uvx-tools.skip-package = true
envs.uvx-tools.style = "requirements"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]
