[project]
name = "cookiecutter-nist-python"
version = "0.13.0"
description = "Cookiecutter template for NIST python packages"
readme = "README.md"
keywords = [
    "cookiecutter-nist-python",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # core dependencies
]

[project.urls]
Documentation = "https://pages.nist.gov/cookiecutter-nist-python/"
Homepage = "https://github.com/usnistgov/cookiecutter-nist-python"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "nox" },
    { include-group = "test" },
    { include-group = "type" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
    { include-group = "test-extras" },
]
type = [
    { include-group = "nox" },
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "test-extras" },
    { include-group = "typecheck-runner" },
]
docs = [
    "autodocsumm",
    "myst-parser",
    "sphinx>=5.3.0",
    # other
    "sphinx-book-theme",
    "sphinx-copybutton",
]
# other groups
basedpyright = [ "basedpyright>=1.39.8" ]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
ipython = [ "ipython" ]
mypy = [ "mypy[faster-cache]>=2.1.0" ]
nox = [ "nox>=2026.4.10" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
test-extras = [
    "cookiecutter",
    "copier>=9.15.2",
    # needed for copier/cookie compat
    "copier-template-extensions>=0.3.3",
]
typecheck-runner = [ "typecheck-runner>=0.2.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------
[tool.uv]
required-version = ">=0.11.8"
default-groups = [ "dev" ]
fork-strategy = "requires-python"
exclude-newer = "7 days"
managed = true
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.uv.dependency-groups]
dev.requires-python = ">=3.14"
docs-live.requires-python = ">=3.14"
docs-spelling.requires-python = ">=3.14"
docs.requires-python = ">=3.14"
ipython.requires-python = ">=3.14"
mypy.requires-python = ">=3.14"
nox.requires-python = ">=3.14"

# * Checks ---------------------------------------------------------------------
[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
    "PP002",
    "PP003",
]

[tool.pyproject-fmt]
# max_supported_python = "3.13"
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
    "tool.mypy.overrides",
    "tool.pyproject2conda",
    "tool.pyright.executionEnvironments",
    "tool.pytest",
    "tool.typos",
    "tool.uv.dependency-groups",
    "tool.uv.exclude-newer-package",
]
indent = 4
keep_full_version = true

[tool.typos.default.extend-identifiers]
CPY = "CPY"

[tool.typos.files]
extend-exclude = [ ".copier-answers.y*ml" ]

# * typecheck ---------------------------------------------------------------------
[tool.mypy]
files = [
    "noxfile.py",
    "tests",
    "tools",
]
# options
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [ "cookiecutter.*" ]
ignore_missing_imports = true

[tool.pyrefly]
enabled-ignores = [ "pyrefly" ]
project-includes = [
    "noxfile.py",
    "tests",
    "tools",
]
search-path = [ "." ]

[tool.pyright]
typeCheckingMode = "strict"
include = [
    "noxfile.py",
    "tests",
    "tools",
]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
enableTypeIgnoreComments = false
# options
# reportMissingSuperCall = true
deprecateTypingAliases = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = false
reportImportCycles = true
reportOverlappingOverload = true
reportPrivateImportUsage = false
reportPrivateUsage = false
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedCallResult = true
reportUnusedImport = false
reportUnusedVariable = false
enableReachabilityAnalysis = false

[[tool.pyright.executionEnvironments]]
root = "tests"
# reportCallIssue = false
# reportArgumentType = false
# reportMissingImports = false
reportUnusedCallResult = false

[tool.ty]
src.include = [
    "noxfile.py",
    "tests",
    "tools",
]
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false

# * Testing --------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
    "-s",
]
testpaths = [
    "tests",
]
# markers
markers = [
    "book: sphinx book theme",
    "click: Click cli",
    "cookie: cookiecutter",
    "copier: run copier tests",
    "create: simple test on path creation",
    "default: default template",
    "disable: test that has been disabled by default",
    "docs: make docs",
    "furo: furo theme",
    "lint: run linting",
    "longname: a project with a long name",
    "nocli: no command-line interface",
    "notebook: run test on notebook",
    "test: run tests",
    "typecheck: run type checkers",
    "typer: Typer template",
    "version: update-version-scm (disabled by default)",
]
# options
filterwarnings = [
    "error",
    "ignore: Dirty template:copier.errors.DirtyLocalWarning",
    "ignore: urllib3:Warning",
]
log_cli_level = "INFO"
log_level = "INFO"
minversion = "8"
strict_xfail = "true"

[tool.coverage]
run.branch = true
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/vendored/*",
]
report.show_missing = true

[tool.commitizen]
use_shortcuts = true

# * Dependency creation --------------------------------------------------------
[tool.pyproject2conda]
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
conda-deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }
copier-template-extensions = { pip = true }

[tool.pyproject2conda.envs.dev]
groups = "dev"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"

[tool.pyproject2conda.envs.uvx-tools]
pip-deps = [
    # these used solely for specking tools to be run via uvx ...
    "conda-lock>=4.0.1",
    "copier-template-extensions>=0.3.3",
    "copier>=9.15.2",
    "grayskull>=3.1.1",
    "prek>=0.4.5",
    "pyrefly>=1.1.0",
    "pyright>=1.1.410",
    "rooster>=0.1.1",
    "twine>=6.2.0",
    "ty>=0.0.50",
    # include here to sync deps with tools/sync_pyproject_min_version.py
    "cogapp>=3.6.0",
    "cruft>=2.16.0",
    "nbqa>=1.9.1",
    "packaging>=26.2",
    "requirements-parser>=0.13.1",
]
groups = [
    "basedpyright",
    "mypy",
    "typecheck-runner",
]
skip-package = true
style = "requirements"

[tool.uv-locker]
pip-compile-config-file = "requirements/uv.toml"
scripts = [
    "noxfile.py",
    "tools/check_dist_version.py",
    "tools/cog_runner.py",
    "tools/sync_pyproject_min_versions.py",
    "tools/sync_template_uv_build_deps.py",
]

[[tool.uv-locker.requirements]]
path = "requirements/uvx-tools.txt"
output-file = "requirements/lock/uvx-tools.txt"
python = "min"
options = [
    "--no-deps",
    "--no-strip-extras",
    "--universal",
]

# * Other tools ----------------------------------------------------------------
[tool.rooster]
changelog_contributors = true
major-labels = [ "breaking" ]
minor_labels = [ "enhancement" ]
patch-labels = [ "bug", "documentation" ]
# options
ignore-labels = [ "internal" ]
require-labels = [ "breaking", "bug", "documentation", "enhancement" ]
version_files = [
    "pyproject.toml",
]
# sections
section-labels."Breaking changes" = [ "breaking" ]
section-labels."Bug fixes" = [ "bug" ]
section-labels.Documentation = [ "documentation" ]
section-labels.Enhancements = [ "enhancement" ]
section-labels.Internal = [ "internal" ]
section-labels."Other changes" = [ "__unknown__" ]
