[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.8.22,<0.10.0",
]

[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0.dev0"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
keywords = [
    "{{ cookiecutter.project_name }}",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    {%- if cookiecutter.command_line_interface == "click" %}
    "click",
    {%- elif cookiecutter.command_line_interface == "typer" %}
    "typer",
    {%- endif %}
]
{% if cookiecutter.command_line_interface != "none" -%}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug}}.cli:main"
{% endif -%}
[project.urls]
Documentation = "https://pages.nist.gov/{{ cookiecutter.project_name }}/"
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name}}"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "notebook" },
    { include-group = "nox" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    { include-group = "test-notebook" },
    { include-group = "typecheck" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
]
docs = [
    {%- if cookiecutter.sphinx_use_autodocsumm %}
    "autodocsumm",
    {%- endif %}
    {%- if cookiecutter.sphinx_theme == "furo" %}
    "furo",
    {%- endif %}
    "myst-nb",
    "sphinx>=5.3.0",
    # myst-parser, ipython,
    {%- if cookiecutter.command_line_interface == "argparse" %}
    "sphinx-argparse",
    {%- endif %}
    {%- if cookiecutter.sphinx_theme == "sphinx_book_theme" %}
    "sphinx-book-theme",
    {%- endif %}
    {%- if cookiecutter.command_line_interface in ["click", "typer"] %}
    "sphinx-click",
    {%- endif %}
    "sphinx-copybutton",
]
# other packages/tools
basedpyright = [ "basedpyright>=1.31.3" ]
cog = [ "cogapp" ]
ipython = [ "ipython" ]
mypy = [ "mypy[faster-cache]>=1.15.0" ]
notebook = [ "ipykernel", "nbclient" ]
nox = [ "nox>=2025.5.1" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
pytest-accept = [ "pytest-accept" ]
typecheck-runner = [ "typecheck-runner>=0.1.0; python_version>'3.9'" ]
# other environments
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
test-extras = [
    { include-group = "test" },
]
test-notebook = [
    "nbval",
    { include-group = "test" },
]
typecheck = [
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "typecheck-runner" },
]

# * uv -------------------------------------------------------------------------

[tool.uv]
managed = true
default-groups = [ "dev" ]
fork-strategy = "requires-python"
required-version = ">=0.7.15"

[tool.uv.build-backend]
source-include = [ "tests/**" ]

[tool.uv.dependency-groups]
dev.requires-python = ">=3.14"
docs.requires-python = ">=3.14"
docs-live.requires-python = ">=3.14"
docs-spelling.requires-python = ">=3.14"
# other tools
cog.requires-python = ">=3.14"
ipython.requires-python = ">=3.14"
mypy.requires-python = ">=3.14"
notebook.requires-python = ">=3.14"
nox.requires-python = ">=3.14"

[tool.uv.pip]
annotation-style = "line"
generate-hashes = true

# * Checks ---------------------------------------------------------------------

[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
    "PC901",  # ci message
]

[tool.check-wheel-contents]
toplevel = [ "{{ cookiecutter.project_slug }}" ]
src_dir = [ "src" ]

[tool.pyproject-fmt]
indent = 4
# max_supported_python = "3.13"
keep_full_version = true
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
]
collapse_tables = [  ]

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = [
    "README.md",
    "{{ cookiecutter.project_slug }}",
    "tests",
]
minversion = "8"
log_cli_level = "INFO"
log_level = "INFO"
strict_xfail = "true"
filterwarnings = [ "error" ]

[tool.coverage.paths]
source = [
    "src/",
    # needed for testing source if not editable install
    ".nox/**/site-packages/",
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
omit = [
    "*/_typing.py",
    "*/vendored/*",
]
include = [
    "src/*",
]

[tool.coverage.run]
branch = true

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
    ".eggs",
    ".nox",
    ".numba_cache",
    ".tox",
    ".venv",
    "docs",
]
check_untyped_defs = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

# [[tool.mypy.overrides]]
# ignore_missing_imports = true
# module = [  ]

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [  ]

[tool.pyrefly]
project-includes = [ "src", "tests" ]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
typeCheckingMode = "strict"
# typeCheckingMode = "standard"
# strict = [
#     "src",
#     "tests",
#     "noxfile.py",
#     "tools/*.py",
# ]
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
# Extra flags
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"

deprecateTypingAliases = true
enableReachabilityAnalysis = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
# reportMissingSuperCall = true
reportUninitializedInstanceVariable = true
reportUnusedCallResult = true

# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateUsage = false                # dupe of PLC2701
reportPrivateImportUsage = false          # dupe of PLC2701
reportUnusedImport = false                # dupe of F401
reportUnusedVariable = false              # dupe of F841

[[tool.pyright.executionEnvironments]]
root = "tests"
# reportCallIssue = false
# reportArgumentType = false
# reportMissingImports = false
reportUnusedCallResult = false

[tool.ty.src]
include = [ "src", "tests" ]

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }

[tool.pyproject2conda.envs.build]
groups = "build-system.requires"
skip-package = true
style = "requirements"

[tool.pyproject2conda.envs.dev]
groups = "dev"
style = [ "requirements", "yaml" ]

[tool.pyproject2conda.envs.docs]
groups = "docs"
style = "requirements"

[tool.pyproject2conda.envs.docs-live]
groups = "docs-live"
style = "requirements"

[tool.pyproject2conda.envs.docs-spelling]
groups = "docs-spelling"
style = "requirements"

[tool.pyproject2conda.envs.pre-commit-additional-dependencies]
reqs = [
    "rust-just",
]
groups = [
    "cog",
]
skip-package = true
style = "requirements"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"
style = [ "requirements", "yaml" ]

[tool.pyproject2conda.envs.test-extras]
groups = "test-extras"
python = "all"
skip-package = true
style = [ "requirements", "yaml" ]

[tool.pyproject2conda.envs.test-notebook]
groups = "test-notebook"
style = "requirements"

[tool.pyproject2conda.envs.typecheck]
groups = "typecheck"
python = "all"
style = "requirements"

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be run via uvx ...
    "conda-lock>=2.5.5",
    "cruft",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit-uv",
    "pre-commit>=4.0.0",
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.396",
    "scriv",
    "twine>=5.0.0",
    "ty",
]
groups = [
    "basedpyright",
    "cog",
    "mypy",
    "nox",
    "typecheck-runner",
]
skip-package = true
style = "requirements"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]
